<resources>
    <string name="app_name">Need Help?</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="mail">E-mail</string>
    <string name="gsm">Téléphone</string>
    <string name="password">Mot de passe</string>
    <string name="confirmation">Confirmer le mot de passe</string>
    <string name="retour">Retour</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="titre">Titre</string>
    <string name="titreDemande">Titre Demande</string>
    <string name="champDescription">Champ Description</string>
    <string name="valueChampDescription">Description</string>
    <string name="defraiement">Defraiement</string>
    <string name="Montant">Montant</string>
    <string name="Categorie">Categorie</string>
    <string name="codePostal">Code Postal</string>
    <string name="profil">Profil</string>
    <string name="demandes">Demandes</string>
    <string name="enCours">En cours</string>
    <string name="mesDemandes">Mes demandes</string>
    <string name="ajoutDemandes">Nouvelle demande</string>
    <string name="modifierProfil">Modifier mon profil</string>
    <string name="RefuserDemande">Refuser</string>


</resources>