<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioProfil"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profil" />

        <RadioButton
            android:id="@+id/radioDemandesToutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/demandes" />

        <RadioButton
            android:id="@+id/radioEnCours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enCours"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioMesDemandes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mesDemandes" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lstDemandesEnCours"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>