<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/connexionMailTexte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="35dip"
        />
    <EditText
        android:id="@+id/connexionMailEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:inputType="textWebEmailAddress"
        android:layout_below="@id/connexionMailTexte"
        />
    <TextView
        android:id="@+id/connexionPSWTexte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@id/connexionMailEdit"
        />
    <EditText
        android:id="@+id/connexionPSWEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/connexionPSWTexte"
        />
    <Button
        android:id="@+id/connexion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:text="@string/connexion"
        android:onClick="goHome"
        />

    <Button
        android:id="@+id/deconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/retour"
        android:onClick="back"
        />
</RelativeLayout>