<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/boutonConnecter"
        android:text="@string/app_name"
     />

    <Button
        android:id="@+id/boutonConnecter"
        android:layout_width="250dip"
        android:layout_height="50dip"
        android:text="@string/connexion"
        android:layout_above="@id/boutonInscription"
        android:layout_marginTop="5dip"
        android:layout_centerHorizontal="true"

        android:onClick="goConnexionScreen"
        />

    <Button
        android:id="@+id/boutonInscription"
        android:layout_width="250dip"
        android:layout_height="50dip"
        android:text="@string/inscription"

        android:layout_marginTop="5dip"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:onClick="goInscriptionScreen"
        />

</RelativeLayout>