<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#1B2AB1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/boutonGoToConnexion"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#ffffff"
     />

    <Button
        android:id="@+id/boutonGoToConnexion"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:layout_above="@id/boutonGoToInscription"
        android:background="@drawable/backgroundbouton"
        android:layout_marginTop="15dip"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/boutonGoToInscription"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:layout_marginTop="10dip"
        android:background="@drawable/backgroundbouton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

</RelativeLayout>